tests/errors/method-throws.vala
void foo () throws Error {
}

void main () {
}
